--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,3 +3,4 @@ fixtures:
     "iop": "#{source_dir}"
   repositories:
     stdlib: "http://github.com/puppetlabs/puppetlabs-stdlib.git"
+    concat: "http://github.com/puppetlabs/puppetlabs-concat.git"
