add iop-4.0 branch to build list

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 branches:
   only:
     - master
+    - iop-4.1
 language: ruby
 before_install: 'bundle install'
 bundler_args: --without development
